Настроены предварительные цветовые схемы (тёмная и светлая). Запуск контента осуществляется через функцию @Composable GameTheme.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MemoryGame"
         tools:targetApi="31" >
-        <activity android:name=".RootActivity"
+        <activity android:name=".presentation.RootActivity"
             android:exported="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
